force-app/main/default/objects/Eligibility_Setting__mdt/Eligibility_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Active eligibility provider and Named Credential used for insurance eligibility callouts. Endpoint and API key stay in the Named / External Credential — never in this metadata or Apex.</description>
    <label>Eligibility Setting</label>
    <pluralLabel>Eligibility Settings</pluralLabel>
</CustomObject>