force-app/main/default/objects/Eligibility_Setting__mdt/fields/Default_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Service_Type__c</fullName>
    <defaultValue>"30"</defaultValue>
    <inlineHelpText>Stedi service type code used when the request does not specify one. 30 = health benefit plan coverage.</inlineHelpText>
    <label>Default Service Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>