force-app/main/default/objects/Eligibility_Setting__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <defaultValue>"Stedi_Eligibility"</defaultValue>
    <inlineHelpText>Developer name of the Named Credential used as callout:Name. Do not store an API key here.</inlineHelpText>
    <label>Named Credential</label>
    <length>80</length>
    <type>Text</type>
</CustomField>