force-app/main/default/objects/Eligibility_Setting__mdt/fields/Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Name__c</fullName>
    <defaultValue>"Stedi"</defaultValue>
    <label>Provider Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>